# tfbpgo

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  docker-compose.yml
.github/workflows/: artifact-publish.yml  image-publish.yml  loadtest-smoke.yml
backend/: Makefile  README.md  go.mod  go.sum  openapi.yaml
backend/static/: embed.go  index.html
data_prep/: README.md  SCHEMA.md  brentlab_yeast_collection.yaml  pyproject.toml
data_prep/src/data_prep/: _sql.py  build_duckdb.py  build_fixture.py  manifests.py  materialize.py  record_parity_fixtures.py
data_prep/tests/: conftest.py  test_build_duckdb.py  test_build_duckdb_smoke.py  test_build_fixture.py  test_manifests.py  test_materialize.py  test_sql.py
deploy/: README.md  s3-upload.sh
deploy/demo/: README.md  docker-compose.demo.yml
docs/: parity-2026-06-11-promoter-sets-and-comparison.md
docs/audits/: 2026-06-12-pre-deploy-audit.md
docs/parity/: README.md  binding.md  comparison.md  home.md  perturbation.md  (+1 more)
docs/parity-reaudit-2026-05-28/: CRITICAL.md  README.md  app-chrome.md  binding.md  comparison.md  data-prep-manifest.md  home.md  non-gaps.md  perturbation.md  select-datasets.md  sql-numerical-parity.md
frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
infra/: cost-control.tf  deploy-iam-policy.example.json  ec2.tf  iam.tf  main.tf  network.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf  vpc.tf
tests/: loadtest-summary.md  loadtest-summary.v2.check.sh
(+286 files in other folders)
